syntax = "proto3";

package orders;

option go_package = "./;orders";

import "google/api/annotations.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service OrderService {
    rpc AcceptOrder (AcceptOrderRequest) returns (AcceptOrderResponse) {
        option (google.api.http) = {
            post: "/orders/accept"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Accept an order",
            description: "This endpoint accepts an order based on the provided details."
        };
    }
    rpc AcceptReturn (AcceptReturnRequest) returns (AcceptReturnResponse) {
        option (google.api.http) = {
            post: "/returns/accept"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Accept a return",
            description: "This endpoint accepts a return based on the provided details."
        };
    }
    rpc DeliverOrder (DeliverOrderRequest) returns (DeliverOrderResponse) {
        option (google.api.http) = {
            post: "/orders/deliver"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Deliver orders",
            description: "This endpoint delivers the specified orders."
        };
    }
    rpc GetOrders (GetOrdersRequest) returns (GetOrdersResponse) {
        option (google.api.http) = {
            get: "/orders"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Get orders",
            description: "This endpoint retrieves orders for the specified user."
        };
    }
    rpc GetReturns (GetReturnsRequest) returns (GetReturnsResponse) {
        option (google.api.http) = {
            get: "/returns"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Get returns",
            description: "This endpoint retrieves returns with pagination."
        };
    }
    rpc ReturnOrder (ReturnOrderRequest) returns (ReturnOrderResponse) {
        option (google.api.http) = {
            delete: "/orders/return"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Return an order",
            description: "This endpoint delete order."
        };
    }
}

message Order {
    int32 id = 1;
    int32 recipient = 2;
    string expire = 3;
    string status = 4;
}

message Return {
    int32 id = 1;
    int32 recipient = 2;
    string expire = 3;
    string returnedAt = 4;
}

message AcceptOrderRequest {
    int32 user = 1 [(validate.rules).int32.gt = 0];
    int32 order = 2 [(validate.rules).int32.gt = 0];
    int32 weight = 3 [(validate.rules).int32.gt = 0];
    int32 basePrice = 4 [(validate.rules).int32.gt = 0];
    string expire = 5 [(validate.rules).string = {
        min_len: 1,
        max_len: 55
    }];
    string wrapper = 6 [(validate.rules).string = {
        min_len: 1,
        max_len: 55
    }];
}

message AcceptOrderResponse {}

message AcceptReturnRequest {
    int32 user = 1 [(validate.rules).int32.gt = 0];
    int32 order = 2 [(validate.rules).int32.gt = 0];
}

message AcceptReturnResponse {}

message DeliverOrderRequest {
    repeated int32 orders = 1 [(validate.rules).repeated.items.int32.gt = 0];
}

message DeliverOrderResponse {}

message GetOrdersRequest {
    int32 user = 1 [(validate.rules).int32.gt = 0];
    int32 count = 2 [
        (validate.rules).int32.gte = 0
    ];
}

message GetOrdersResponse {
    repeated Order orders = 1;
}


message GetReturnsRequest {
    int32 offset = 1 [
        (validate.rules).int32.gte = 0
    ];
    int32 limit = 2 [(validate.rules).int32.gte = 0];
}

message GetReturnsResponse {
    repeated Return returns = 1;
}


message ReturnOrderRequest {
    int32 order = 1 [(validate.rules).int32.gt = 0];
}

message ReturnOrderResponse {}